# ZeroCam

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  ZeroCam.img  config.yaml  reading.md  recordingPaths.txt
CompVisPlayground/: Cargo.toml
CompVisPlayground/src/: main.rs
GenerateToken/: tokenGenerator  tokenGenerator.rs
MediaMTX/: mediamtx-internet.yml  mediamtx-local.yml  mediamtx.yml
TestFiles/: script.bash
TokenGenerator/: Cargo.toml
TokenGenerator/src/: main.rs
ZeroCam/: .gitignore  README.md  index.html  package.json
ZeroCam R Pi/ZeroCam/: .gitignore
ZeroCam R Pi/ZeroCam/ZeroCam/: .gitignore  README.md  package.json
ZeroCam R Pi/ZeroCam/ZeroCam/lib/zerocam/: config.yaml  recordingPaths.txt
ZeroCam R Pi/ZeroCam/ZeroCam/src/: App.tsx  Settings.tsx  global.css
ZeroCam R Pi/ZeroCam/ZeroCam/src-tauri/: Cargo.toml  tauri.conf.json
ZeroCam R Pi/ZeroCam/ZeroCam/src-tauri/capabilities/: default.json
ZeroCam R Pi/ZeroCam/ZeroCam/src-tauri/src/: lib.rs  main.rs
ZeroCam R Pi/ZeroCam/ZeroCam/src-tauri/src/Camera/: CameraController.rs  MotionListener.rs
ZeroCam R Pi/ZeroCam/ZeroCam/src-tauri/src/GDFiles/: FileListener.rs
ZeroCam R Pi/ZeroCam/ZeroCam/src-tauri/src/Net/: NetworkController.rs  mod.rs
ZeroCam R Pi/ZeroCam/ZeroCam/src-tauri/src/Telegram/: TelegramBot.rs
ZeroCam/lib/zerocam/: config.yaml  recordingPaths.txt  secret.json  tokenCache.json
ZeroCam/lib/zerocam/LiveRecording/: output000.ts  output001.ts
ZeroCam/src/: App.css  App.tsx  ConfigModel.ts  Settings.tsx  global.css  index.html  main.js  main.tsx  package.json  styles.css  vite-env.d.ts
ZeroCam/src-tauri/: Cargo.toml  tauri.conf.json
ZeroCam/src-tauri/icons/: icon.icns
ZeroCam/src-tauri/src/: Config.rs  lib.rs  main.rs
ZeroCam/src-tauri/src/Camera/: CameraController.rs  ClipScheduler.rs  MotionListener.rs  mod.rs
ZeroCam/src-tauri/src/GDFiles/: BackupScheduler.rs  FileListener.rs  GDConnector.rs  GDController.rs  mod.rs
ZeroCam/src-tauri/src/Net/: ConnectionListener.rs  NetworkConnector.rs  NetworkController.rs
ZeroCam/src-tauri/src/Telegram/: TelegramBot.rs  mod.rs
ZeroCam/src-zerocam/: Cargo.toml  tauri.conf.json
ZeroCam/src-zerocam/src/: lib.rs  main.rs
ZeroCam/src-zerocam/src/Camera/: CameraController.rs  ClipScheduler.rs  mod.rs
ZeroCam/src-zerocam/src/Files/: BackupScheduler.rs  FileListener.rs  GDController.rs
ZeroCam/src-zerocam/src/GDFiles/: BackupScheduler.rs  GDConnector.rs  GDController.rs
ZeroCam/src-zerocam/src/Net/: ConnectionListener.rs  mod.rs
builds/zerocam_0.0.0_amd64/control/: control  md5sums
builds/zerocam_0.0.0_arm64/control/: control  md5sums
src/: main.rs
src-zerocam/: Cargo.toml
src-zerocam/src/: lib.rs  main.rs
src-zerocam/src/Files/: BackupScheduler.rs  FileListener.rs  GDConnector.rs  GDController.rs  mod.rs
src/Files/: BackupTriggerListener.rs  FileListener.rs  GDConnector.rs  GDController.rs  mod.rs
src/Net/: ConnectionListener.rs  mod.rs
(+6 files in other folders)
