[package]
name = "ZeroCam"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Joel Staugaitis <56rolsj@gmail.com>"]

[dependencies]
google-drive3 = "6.0.0+20240618"
yup-oauth2 = "12.1.0"
tokio = { version = "1", features = ["full"] }
hyper = "0.14.32"
hyper-rustls = "0.24.2"
log = "0.4.25"
env_logger = "0.11.6"
serde = "1"
serde_json = "1"
hyper-util = "0.1.10"
chrono = "0.4.39"
mime_guess = "2"
notify = "8"
futures = "0.3.31"
