[package]
name = "playground"
version = "0.1.0"
edition = "2021"

[dependencies]
opencv = { version = "0.94.1", features = ["videoio"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
rustls = { version = "0.23.23", features = ["ring"] }
env_logger = "0.11.6"
log = "0.4.26"
