[package]
name = "ZeroCam"
version = "0.2.0"
description = "No subscription DashCam"
authors = ["Joel Staugaitis <56rolsj@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "zerocam_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
google-drive3 = "6.0.0+20240618"
yup-oauth2 = "12.1.0"
tokio = { version = "1", features = ["full"] }
hyper = "0.14.32"
hyper-rustls = "0.24.2"
log = "0.4.25"
env_logger = "0.11.6"
hyper-util = "0.1.10"
chrono = "0.4.39"
mime_guess = "2"
notify = "8"
